Add section on ZGC